# tune-desktop

./: CMakeLists.txt  README.md  contentarea.cpp  contentarea.h  main.cpp  mainwindow.cpp  mainwindow.h  playbackbar.cpp  playbackbar.h  sidebar.cpp  sidebar.h  titlebar.cpp  titlebar.h  topbar.cpp  topbar.h
